[gd_scene load_steps=14 format=2]

[ext_resource path="res://Common/MovableObjects/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Common/MovableObjects/Explosion.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 400, 400, 400 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1600, 400, 400, 400 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AnimatedSprite" type="AnimatedSprite"]
frames = SubResource( 11 )
frame = 4
speed_scale = 3.0
script = ExtResource( 1 )

[node name="WestShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -112, 0 )
collision_mask = 113

[node name="EastShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 112, 0 )
collision_mask = 113

[node name="NorthShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -112 )
collision_mask = 113

[node name="SouthShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 113

[node name="NWShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -88, -88 )
collision_mask = 113

[node name="SWShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -96, 32 )
collision_mask = 113

[node name="NEShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 88, -88 )
collision_mask = 113

[node name="SEShrap" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 96, 32 )
collision_mask = 113

[connection signal="animation_finished" from="." to="." method="_on_AnimatedSprite_animation_finished"]
